# news-ingestion-service

./: .env.example  .gitignore  README.md  docker-compose.yml  parser.pl  pyproject.toml
backend/: Dockerfile  conftest.py  manage.py
backend/apps/articles/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/articles/tests/: test_models.py
backend/apps/feeds/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/feeds/tests/: test_models.py  test_views.py
backend/apps/sync/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  health_urls.py  urls.py
backend/config/settings/: base.py  test.py
backend/requirements/: base.txt  dev.txt
backend/services/: feed_ingestion.py  legacy_parser.py  normalizers.py  python_parser.py
backend/services/tests/: test_feed_ingestion.py
docs/: api.md  architecture.md  migration-plan.md
legacy/lib/Feed/: Fetcher.pm  JSONWriter.pm  Normalizer.pm  Util.pm
legacy/lib/Feed/Parser/: Atom.pm
lib/Feed/: App.pm  Parser.pm
lib/Feed/Parser/: RSS.pm
