[project]
name = "news-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.3.0",
    "django>=4.2,<5.0",
    "django-filter>=23.0",
    "djangorestframework>=3.14.0",
    "feedparser>=6.0.0",
    "gunicorn>=21.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dateutil>=2.8.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "celery>=5.3.0",
    "django>=4.2,<5.0",
    "django-stubs>=4.2.0",
    "djangorestframework>=3.14.0",
    "factory-boy>=3.3.0",
    "flake8>=6.0.0",
    "freezegun>=1.2.0",
    "gunicorn>=21.0.0",
    "mypy>=1.5.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.5.0",
    "python-dateutil>=2.8.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "responses>=0.23.0",
]
